--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   timeago: ^3.6.0
   flutter_hooks: ^0.20.4
   hooks_riverpod: ^2.4.9
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
