--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,8 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   image_picker: ^1.0.7
   go_router: ^13.1.0
+  firebase_core: ^2.24.2
+  firebase_messaging: ^14.7.10
 
 dev_dependencies:
   flutter_test:
